<resources>
    <string name="app_name">benchmark</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="number_of_cpus">Number of CPUs:</string>
    <string name="chipset">Chipset:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="model">Model:</string>
    <string name="resolution">Resolution:</string>
    <string name="density">Density:</string>
    <string name="not_yet_performed">Not yet performed</string>
</resources>